Version: 1.1.30
  Bugfixes:
    - Fixed crash when deleting surface that has SRF emitters on it (this one slipped through 1.1.17's surface fixes)
    - Fixed possible crash from trees growing on top of Tiberium Ore patches
    - Fixed Sonic Emitter shadow to not be a laser turret (did you even notice it before?)
  Changes:
    - Added missing temperature requirement on steam for the Accelerated Liquid Tiberium Processing recipe
    - Removed Copper from Empty Cell recipe
    - Reduced plastic cost of empty cells per recipe from 5 to 4
    - Increased empty cell recipe output from 10 to 12
    - Halved Liquid Tiberium cost of filling cells
    - Changed Sonic Emitter recipes to require Programmable Speakers and Batteries instead of Electric Engine Units and Copper Plates
    - Standardized Tiberium Growth Accelerator stack size from 15 to 20
    - Reorganized crafting menu to place all Tiberium Node-related structures on a single row
  Features:
    - Added new Tiberium Monoculture structures that consume power to ensure that only one type of Tiberium spawns in their field
    - Added Deadlock's Stacking Beltboxes & Compact Loaders combatibility (thanks to Vascar and https://mods.factorio.com/mod/DeadlockStackingForTiberium)
    - Added new Require Resource Seed for Transmutation setting to optionally modify recipes that previously broke resource progression from other mods
---------------------------------------------------------------------------------------------------
Version: 1.1.29
  Bugfixes:
    - Fixed Space Exploration ignoring our setting and spawning Tiberium in the starting area
    - Fixed broken recipe name for recipes added by Burner Tier Centrifuging setting
    - Fixed Blue Tiberium Slurry not spilling from pipes when destroyed
    - Fixed TCN beacon range being slightly smaller than the displayed range
    - Fixed malformed technologies from other mods causing evaluateFormula crashes