@@ -245,7 +245,8 @@ tiberium=Tiberium
 
 [mod-setting-name]
 tiberium-growth=Tiberium Patch Richness
-tiberium-spread=Tiberium Patch Size
+tiberium-radius=Tiberium Patch Radius
+tiberium-spread-nodes=Grow New Tiberium Nodes
 tiberium-value=Tiberium Recipe Value
 tiberium-damage=Tiberium Damage
 tiberium-blue-target-evo=Blue Tiberium Appearance Timing
@@ -260,6 +261,7 @@ tiberium-byproduct-1=Refining Sludge Waste
 tiberium-byproduct-2=Refining Sulfur Waste
 tiberium-byproduct-direct=Direct Sludge Waste
 tiberium-debug-text=Debug Mode
+tiberium-debug-text-startup=Debug Mode Startup Logging
 # __1__ is replaced with a centrifuging noun phrase from [technology-name]
 tiberium-centrifuge-override=Override __1__ Outputs
 tiberium-resource-exclusions=Exlcude Specific Resources
@@ -276,19 +278,20 @@ tiberium-byproduct-1=Whether refining recipes produce Tiberium Sludge waste.\nDe
 tiberium-byproduct-2=Whether refining recipes produce Sulfur waste.\nDefault: disabled
 tiberium-byproduct-direct=Whether direct recipes produce Tiberium Sludge waste.\nDefault: disabled
 tiberium-damage=Scale the damage that Tiberium will do to structures when it grows, players standing on it, or players holding it in their inventory. Save game must be reloaded after changing.\nDefault: 10
-tiberium-radius=Distance from nodes that Tiberium can be placed. Save game must be reloaded after changing.\nDefault: 30
+tiberium-radius=Distance from nodes that Tiberium can grow. AOE miners and distances between Blossom Trees also scale with this.\nDefault: 30
 tiberium-growth=Scales the amount of Tiberium ore that can grow on a tile. Save game must be reloaded after changing.\nDefault: 10
 tiberium-blue-target-evo=Around what evolution factor you expect Blue Tiberium to start spawning in the wild\nDefault: 0.6
 tiberium-blue-saturation-point=What percent of Green Tiberium transformed to Blue Tiberium is considered fully saturated.\nDefault: 50%
 tiberium-blue-saturation-slowdown=How fast Green Tiberium should be transformed to Blue Tiberium after the planet is fully saturated with Blue Tiberium.\nDefault: 10%
-tiberium-debug-text=Activates useful and annoying debugging messages both in-game and as part of the startup process. Logs additional information to factorio-current.log file for troubleshooting.\nDefault: disabled
+tiberium-debug-text=Sends many useful and annoying debugging messages in-game.\nDefault: disabled
+tiberium-debug-text-startup=Logs additional information to factorio-current.log file for troubleshooting centrifuging or other issues.\nDefault: disabled
 # __1__ is replaced with a centrifuging noun phrase from [technology-name]
 tiberium-centrifuge-override=Advanced setting: replace the automatically generated __1__ recipe output with something you feel is more appropriate for your mod combination.\nEnter a delimited string of the items/fluids and amounts that should come from the recipe in the exact format "item1-internal-name:item1-amount,item2-internal-name:item2-amount" e.g. iron-ore:13,crude-oil:32\nYou can find items' internal names by loading into a game, pressing F4 to open debug settings, enabling "show-debug-info-in-tooltips", and then mousing over the desired item and noting the "item-name" field. For fluids, mouse over them in FNEI or the un-barreling recipes.\nDefault: leave blank to use the automatically generated __1__ Centrifuging recipe output
 tiberium-resource-exclusions=Advanced setting: list resources that should never be given by tiberium centrifuging or transmutation recipes.\nEnter a delimited string of the items/fluids in the exact format "item1-internal-name,item2-internal-name" e.g. uranium-ore,crude-oil\nYou can find items' internal names by loading into a game, pressing F4 to open debug settings, enabling "show-debug-info-in-tooltips", and then mousing over the desired item and noting the "item-name" field. For fluids, mouse over them in FNEI or the un-barreling recipes.\nDefault: leave blank to allow centrifuging and transmuting all resources
 tiberium-value=Scales how much raw material you get from a single piece of Tiberium ore. Higher values make the game easier.\nDefault: 10
 tiberium-wont-damage-biters=Prevents biters from dying to Tiberium fields. Does not affect damage dealt with Tiberium weapons.\nDefault: enabled
 tiberium-pollution-multiplier=Scales how much extra pollution Tiberium refining and burning produces. Set to 1 to have Tiberium refining not produce more pollution than normal recipes.\nDefault:4
-tiberium-spread=Controls how rapidly Tiberium spreads.  Higher values will aggressively cover the landscape. Zero will give regenerating fields that don't expand infinitely.\nDefault: 30
+tiberium-spread-nodes=Whether spreading Tiberium should naturally grow new nodes and eventually cover the entire planet.\nDefault: enabled
 tiberium-starting-area=This will include Tiberium as one of your starting ore patches.\nYes, it will spread and eat the other starting ore patches.\nYes, that will make the game significantly more difficult.\nYou can expect no mercy and only pain, you've been warned.\nDefault: disabled
 tiberium-tier-zero=This setting adds an additional tier of centrifuging that you can access before unlocking fluid recipes or electricity. Useful for Tiberium only playthroughs with other mods that extend the early game.\nDefault: disabled
 tiberium-advanced-start=Start with some basic Tiberium refining equipment, so that you can do a Tiberium only run.\nDefault: disabled
