@@ -10,12 +10,19 @@ data:extend{
 	},
 	{
 		type = "int-setting",
-		name = "tiberium-spread",
+		name = "tiberium-radius",
 		setting_type = "startup",
 		default_value = 30,
-		minimum_value = 0,
+		minimum_value = 10,
 		maximum_value = 100,
 		order = "a2",
+	},
+	{
+		type = "bool-setting",
+		name = "tiberium-spread-nodes",
+		setting_type = "runtime-global",
+		default_value = true,
+		order = "a3",
 	},
 	{
 		type = "int-setting",
@@ -24,34 +31,34 @@ data:extend{
 		default_value = 10,
 		minimum_value = 1,
 		maximum_value = 100,
-		order = "a3"
+		order = "a4"
 	},
 	{
 		type = "int-setting",
 		name = "tiberium-damage",
-		setting_type = "startup",
+		setting_type = "runtime-global",
 		default_value = 10,
 		minimum_value = 0,
 		maximum_value = 50,
-		order = "a4",
-	},
-	{
-		type = "int-setting",
-		name = "tiberium-blue-saturation-point",
-		setting_type = "startup",
-		default_value = 25,
-		minimum_value = 0,
-		maximum_value = 100,
 		order = "a5",
 	},
 	{
 		type = "int-setting",
+		name = "tiberium-blue-saturation-point",
+		setting_type = "runtime-global",
+		default_value = 25,
+		minimum_value = 0,
+		maximum_value = 100,
+		order = "a6",
+	},
+	{
+		type = "int-setting",
 		name = "tiberium-blue-saturation-slowdown",
-		setting_type = "startup",
+		setting_type = "runtime-global",
 		default_value = 10,
 		minimum_value = 0,
 		maximum_value = 1000,
-		order = "a6",
+		order = "a7",
 	},
 	{
 		type = "bool-setting",
@@ -63,7 +70,7 @@ data:extend{
 	{
 		type = "bool-setting",
 		name = "tiberium-wont-damage-biters",
-		setting_type = "startup",
+		setting_type = "runtime-global",
 		default_value = true,
 		order = "b2",
 	},
@@ -105,16 +112,23 @@ data:extend{
 	{
 		type = "bool-setting",
 		name = "tiberium-auto-scale-performance",
-		setting_type = "startup",
+		setting_type = "runtime-global",
 		default_value = false,
 		order = "b8",
 	},
 	{
 		type = "bool-setting",
 		name = "tiberium-debug-text",
-		setting_type = "startup",
+		setting_type = "runtime-global",
 		default_value = false,
 		order = "c1",
+	},
+	{
+		type = "bool-setting",
+		name = "tiberium-debug-text-startup",
+		setting_type = "startup",
+		default_value = false,
+		order = "c2",
 	},
 	{
 		type = "string-setting",
@@ -172,7 +186,7 @@ data:extend{
 	{
 		type = "double-setting",
 		name = "tiberium-blue-target-evo",
-		setting_type = "startup",
+		setting_type = "runtime-global",
 		default_value = 0.6,
 		minimum_value = 0,
 		maximum_value = 1,
